--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "url": "https://github.com/lukekarrys/ampersand-collection-history/issues"
   },
   "dependencies": {
-    "backbone-events-standalone": "^0.2.4",
-    "lodash.assign": "^2.4.1"
+    "backbone-events-standalone": "^0.2.4"
   },
   "devDependencies": {
     "ampersand-collection": "^1.3.17",
