--- a/package.json
+++ b/package.json
@@ -7,20 +7,20 @@
     "url": "https://github.com/lukekarrys/ampersand-collection-history/issues"
   },
   "dependencies": {
-    "backbone-events-standalone": "^0.2.4"
+    "ampersand-events": "^1.1.1"
   },
   "devDependencies": {
-    "ampersand-collection": "^1.3.17",
-    "ampersand-state": "^4.3.14",
-    "browserify": "^6.3.2",
-    "js-size": "^1.0.2",
-    "jshint": "^2.5.10",
-    "lodash.range": "^2.4.1",
-    "phantomjs": "^1.9.12",
-    "precommit-hook": "^1.0.7",
-    "tap-spec": "^1.0.1",
-    "tape": "^3.0.2",
-    "tape-run": "^0.3.0"
+    "ampersand-collection": "^1.4.5",
+    "ampersand-state": "^4.5.0",
+    "browserify": "^9.0.3",
+    "js-size": "^1.0.3",
+    "jshint": "^2.6.3",
+    "lodash.range": "^3.0.0",
+    "phantomjs": "^1.9.16",
+    "precommit-hook": "^2.0.1",
+    "tap-spec": "^2.2.2",
+    "tape": "^3.5.0",
+    "tape-run": "^1.0.0"
   },
   "homepage": "https://github.com/lukekarrys/ampersand-collection-history",
   "keywords": [
